provarAnt/00D190000000ZY2EAM/objects/Used_Core__c.object
<CustomObject>
    <fields>
        <fullName>Base_Price__c</fullName>
        <label>Base Price</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>115</length>
        <type>Text</type>
    </fields>
    <label>Used Core</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Used Core Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Used Cores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>